# GIMC

./: .gitignore  LICENSE  README.md
results/: cvw.txt  gvf.txt  gvf_lwf_f.txt  gvf_lwf_p.txt  gvw.txt  gvw_lwf_b.txt  gvw_lwf_f.txt  gvw_lwf_l4.txt  gvw_lwf_lr.txt  gvw_lwf_p.txt
src/: CMakeLists.txt  base.c  clutil.c  clutil.h  common.h  filter.c  filter.h  image.c  image.h  nconv.c  nconv_lwf.c  nconv_lwf_local.c  nconv_lwf_partials.c
